# vsnap

./: .gitignore  LICENSE  docker-compose.yml  dockerfile  readme.md  release.sh
rust/: Cargo.toml  rustfmt.toml
rust/cli/: Cargo.toml
rust/cli/src/: library.rs  main.rs
rust/runner/: Cargo.toml
rust/runner/src/: library.rs  main.rs
rust/runner/tests/: snapshot.rs
