[package]
name = "vsnap-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bollard = "0.18.1"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
console = "0.15.11"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
indoc = "2.0.6"
inquire = { version = "0.7.5", default-features = false, features = [
    "console",
] }
itertools = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tabled = { version = "0.18.0", features = ["ansi"] }
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "io-std"] }
vsnap-library = { path = "../library" }
