[package]
name = "vsnap-runner"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.18.0"
walkdir = "2.5.0"
zstd = "0.13.3"
vsnap = { path = "../cli" }
