[package]
name = "vsnap-runner"
version = "0.6.0-rc.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.18.0"
walkdir = "2.5.0"
vsnap = { path = "../cli" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = [
    "fs",
    "io-std",
    "io-util",
    "rt-multi-thread",
    "tokio-macros",
] }
async-compression = { version = "0.4.21", features = ["tokio", "zstd"] }
astral-tokio-tar = "0.5.1"
futures-util = "0.3.31"
